# Rusterizer

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: rust.yml
examples/: desktop.rs
examples/web/: Cargo.toml
examples/web/src/: index.html  lib.rs
src/: draw.rs  framebuffer.rs  geometry.rs  lib.rs  main.rs  renderer.rs  texture.rs  texture_helper.rs
