[package]
name = "rusterer"
version = "0.1.0"
edition = "2021"
authors = ["Paul Bryden"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Defines a feature named 'web'
web = []

[dependencies]
embedded-graphics = "0.8.0"
tinybmp = "0.5.0"

[dev-dependencies]
minifb = "0.24.0"

[lib]
name = "rusterer"
path = "src/lib.rs"
crate-type = ["lib"] 

[[example]]
name = "desktop"
