[package]
name = "web_app"
version = "0.1.0"
authors = ["dc"]
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]


[features]
web = ["instant/wasm-bindgen","minifb/web"]


[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.87"
web-sys = "0.3.56"
instant = "0.1.12"
minifb = { version = "0.24.0", default-features = false }
js-sys = "0.3.56"
wasm-rs-shared-channel = "0.1.0"
wasm-bindgen-futures = "0.4.29"
rusterizer = { path = '../../.', features=["web"]}
lazy_static = "1.4.0"

# Set these to `false` when running on 32 bit platforms.
# there is a bug in wasm-pack https://github.com/rustwasm/wasm-pack/issues/974
[package.metadata.wasm-pack.profile.dev]
wasm-opt = true

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = true
